--- a/_config.yml
+++ b/_config.yml
@@ -26,15 +26,12 @@ description_footer:
 
 # comments
 # two ways to comment, only choose one, and use your own short name
-
-duoshuo_shortname: #
-disqus_shortname: 
+ 
+#disqus_shortname: 
 
 # statistic analysis 
-# hm.src = "//hm.baidu.com/hm.js?xxxxxxxxxxxx";
-# xxxxx字符串
-baidu_tongji_id: 
-google_analytics_id:  # google 分析追踪id
+
+google_analytics_id:  # google 
 
 # Build settings
 markdown: kramdown
